# wayfinder

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  ThirdPartyNotices  bootstrap.sh  superbuild.sh  version.h.in
common/: CMakeLists.txt
core/: CMakeLists.txt  variable_names.txt
core/src/main/native/cpp/apriltag/: AprilTagDetector.cpp
core/src/main/native/cpp/common/: envutils.cpp  json_utils.cpp  jval_compat.cpp  serde.cpp  testutils.cpp
core/src/main/native/cpp/common/logging/: LoggerManager.cpp
core/src/main/native/cpp/common/marshalling/: marshal_apriltag_field_pose_observation_impl.cpp  marshal_apriltag_relative_pose_observation_impl.cpp  marshal_pipeline_result_impl.cpp  marshal_pose3_impl.cpp
core/src/main/native/cpp/common/scheduling/: ThreadPool.cpp  threadutils_impl_linux.cpp  threadutils_impl_macos.cpp  threadutils_impl_win32.cpp
core/src/main/native/cpp/common/serde/: apriltag_field_pose_observation_serde_impl.cpp  apriltag_relative_pose_observation_serde_impl.cpp  legacy.cpp  pipeline_result_serde_impl.cpp  pose3_serde_impl.cpp
core/src/main/native/cpp/configuration/: ConfigLoader.cpp  JSONLoader.cpp  ResourceManager.cpp  WFDefaults.cpp  WFSystemConfig.cpp
core/src/main/native/cpp/detail/validation/: inference_validators.cpp  tag_detector_validators.cpp  video_validators.cpp
core/src/main/native/cpp/fiducial/: ApriltagDetector.cpp  ApriltagField.cpp  ApriltagFieldHandler.cpp  ArucoDetector.cpp  tag_detector_configs.cpp
core/src/main/native/cpp/fiducial/pose/: pnp.cpp
core/src/main/native/cpp/graph/: PoseOptimizer.cpp
core/src/main/native/cpp/hardware/: CSCameraHandler.cpp  CSCameraSink.cpp  CameraConfiguration.cpp  HardwareManager.cpp
core/src/main/native/cpp/inference/: CPUInferenceEngine.cpp  CPUInferenceEngineYOLO.cpp  InferenceEngineFactory.cpp  Tensorizer.cpp  inference_utils.cpp  postproc_utils.cpp
core/src/main/native/cpp/logging/: LoggerManager.cpp
core/src/main/native/cpp/network/: BSDSocket.cpp  MasterTime.cpp  MockTimeSocket.cpp  NTDataPublisher.cpp  NetworkTablesManager.cpp  Socket.cpp  TimeClient.cpp  UDPIPSocket.cpp  UDPIP_Sock.cpp  WFTSClient.cpp  WFTSClientHandler.cpp  WFTSManager.cpp  WFTSServer.cpp
core/src/main/native/cpp/pipeline/: ApriltagDetector.cpp  ApriltagPipeline.cpp  ApriltagPipelineConfiguration.cpp  ApriltagPipelineFactory.cpp  ObjectDetectionPipeline.cpp  ObjectDetectionPipelineConfiguration.cpp  annotations.cpp  pnp.cpp
core/src/main/native/cpp/pipeline/config/: ApriltagPipelineConfiguration.cpp  ObjectDetectionPipelineConfiguration.cpp
core/src/main/native/cpp/pipeline/output/: ApriltagPipelineConsumer.cpp  ApriltagPipelineStreamer.cpp  ObjdetectPipelineConsumer.cpp
core/src/main/native/cpp/pipeline/pipelines/: ApriltagPipeline.cpp  (+2 more)
core/src/main/native/cpp/processes/: VisionWorker.cpp  VisionWorkerConfig.cpp  VisionWorkerManager.cpp  WFOrchestrator.cpp
core/src/main/native/cpp/scheduling/: ThreadPool.cpp  threadutils_impl_linux.cpp  threadutils_impl_macos.cpp  threadutils_impl_win32.cpp
core/src/main/native/cpp/utils/: FiniteStateMachine.cpp
core/src/main/native/cpp/video/: CSCameraSink.cpp  CVFormatConverter.cpp  CVFrameConverter.cpp  MJPEGVideoServerCS.cpp  UsbCameraSinkCS.cpp  video_types.cpp  video_utils.cpp
core/src/main/native/include/: field.h  types.h
core/src/main/native/include/apriltag/: AprilTagDetection.h  AprilTagDetector.h  AprilTagField.h
core/src/main/native/include/logging/: LoggerManager.h
core/src/main/native/include/pipeline/: ApriltagDetector.h  pnp.h
core/src/main/native/include/utils/: cv2gtsam_interface.h  geometry.h  units.h
core/src/main/native/include/wfcore/: types.h  wfmacros.h
core/src/main/native/internal/: README.txt
core/src/main/native/internal/detail/: README.txt
core/src/native/cpp/: main.cpp
core/src/native/cpp/logging/: LoggerManager.cpp
core/src/native/cpp/pipeline/: ApriltagDetector.cpp  apriltag_detector.cpp  pnp.cpp  solvepnp.cpp
core/src/native/cpp/utils/: cv2gtsam_interface.cpp  cv2wpilib_interface.cpp
core/src/native/cpp/utils/interface/: cv2wpilib.cpp
core/src/native/include/: field.h  types.h  wftypes.h
core/src/native/include/pipeline/: ApriltagDetector.h  apriltag_detector.h  pnp.h  solvepnp.h
core/src/native/include/utils/: coordinates.h  cv2gtsam_interface.h  geometry.h  gtsam_geometry.h
core/src/native/include/utils/interface/: cv2gtsam.h  cv2wpilib.h
core/src/test/native/: JSONLoaderTests.cpp  JSONTests.cpp  apriltagTests.cpp  coordinatesTest.cpp  cvprocessTests.cpp  geometryTest.cpp  loggerTest.cpp  processTests.cpp  serdeTests.cpp  wftsTests.cpp
daemon/: CMakeLists.txt  README.md  launch.sh
daemon/src/main/native/: main.cpp  server.cpp  server.h  wfd.cpp  wfd.h
daemon/src/main/native/server/: basic_handlers.h  dynamic_handlers.h  env_handlers.h  server.cpp  server.h  server_utils.cpp  server_utils.h
demos/: CMakeLists.txt
demos/wfcore/: apriltag_2D_demo.cpp  apriltag_3D_demo.cpp  cssink_demo.cpp
svcore/: CMakeLists.txt  requirements.txt
svcore/src/native/cpp/: main.cpp
svcore/src/native/include/: field.h  svtypes.h  visiontypes.h
svcore/src/native/include/pipeline/: pnpsolve.h
svcore/src/native/include/slam/: pose2slam.h
wfcore/: CMakeLists.txt
wfcore/src/main/native/cpp/fiducial/: ApriltagDetector.cpp  ApriltagField.cpp
wfcore/src/main/native/cpp/internal/: codecs.cpp  gsthelpers.cpp
wfcore/src/main/native/cpp/logging/: LoggerManager.cpp
wfcore/src/main/native/cpp/pipeline/: ApriltagPipeline.cpp  pnp.cpp
wfcore/src/main/native/cpp/video/: CVFormatConverter.cpp  USBCapture.cpp  UsbCameraCS.cpp  UsbCameraSinkCS.cpp  code.cpp  video_utils.cpp
wfcore/src/main/native/include/wfcore/: types.h  wfmacros.h
wfcore/src/main/native/internal_headers/impl/: codecs.h  gsthelpers.h
wfcore/src/main/native/internal_headers/internal/: gsthelpers.h
wfcore/src/test/native/: coordinatesTest.cpp  processTests.cpp
wfvtk/: CMakeLists.txt  README.md
wfvtk/src/main/native/cpp/: gst_elements.h  init.cpp
wfvtk/src/main/native/include/wfvtk/: AppSink.h  init.h
(+352 files in other folders)
